<resources>
    <string name="app_name">MyBrower</string>
    <string name="tv_account">账号：</string>
    <string name="tv_pwd">密码：</string>
    <string name="tv_phone">手机:</string>
    <string name="btn_reg">注册</string>
    <string name="btn_login">登录</string>
    <string name="btn_jump_reg">用户注册</string>
    <string name="tv_chat">嗨！</string>
    <string name="rb_discover">发现</string>
    <string name="rb_me">我</string>
    <string name="rb_contact">联系人</string>
    <string name="rb_chat">聊天</string>
    <string name="btn_resister">点击注册</string>


</resources>
